<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE2E1"
    tools:context=".ui.slideshow.SlideshowFragment">

    <View
        android:id="@+id/divider6"
        android:layout_width="249dp"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:foregroundTint="#FA5B75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/divider7"
        android:layout_width="249dp"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:foregroundTint="#FA5B75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="188dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/historial_citas"
        android:textAlignment="center"
        android:textColor="#59122C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/tratamiento_realizado"
        android:textAlignment="viewStart"
        android:textColor="#59122C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="188dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:srcCompat="@drawable/beauty" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/hFecha"
        android:textAlignment="viewEnd"
        android:textColor="#59122C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <ListView
        android:id="@+id/ltsCitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="81dp"
        android:cacheColorHint="@color/secondaryBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

</androidx.constraintlayout.widget.ConstraintLayout>